--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
 <body>
   <div id="video_wrap">
     <div class="video">
-    <video muted="" preload="true" autoplay webkit-playsinline="webkit-playsinline" playsinline="playsinline" width="100%">
-        <!--
-            미리 로드하기 설정 : preload
-            재생여부 : autoplay (자동재생)
-            사운드 설정 : muted (음소거)
-            반복재생여부 : loop (무한반복)
-        -->
-            <source src="video/nucksal00.mp4" type="video/mp4">
-        </video>
+      <iframe width="1200" height="750" src="https://www.youtube.com/embed/NXbPVDpfrUw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
 </body>
